--- a/index.html
+++ b/index.html
@@ -15,26 +15,37 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="illustration">
-      <img src="./images/drawers.jpg" alt="">
+  <article>
+    <div class="product_image">
     </div>
-    <h1>
-      Shift the overall look and feel by adding these wonderful
-      touches to furniture in your home</h1>
-    <p>
-      Ever been in a room and felt like something was missing? Perhaps
-      it felt slightly bare and uninviting. I’ve got some simple tips
-      to help you make any room feel complete.</p>
-<div class="div">
-  <div class="buyer-info">
-    Michelle Appleton
-    28 Jun 2020</div>
-    <img src="./images/icon-share.svg" alt="icon-share">
-</div>
-<div class="share-pop-up">
-    Share</div>
-  </div>
+    <div class="buyer_review">
+      <h1>
+        Shift the overall look and feel by adding these wonderful
+        touches to furniture in your home</h1>
+      <p>
+        Ever been in a room and felt like something was missing? Perhaps
+        it felt slightly bare and uninviting. I’ve got some simple tips
+        to help you make any room feel complete.</p>
+      <div class="div">
+        <div class="buyer">
+          <img src="./images/avatar-michelle.jpg" alt="">
+          <div class="buyer_info">
+            <p>Michelle Appleton</p>
+            <p>28 Jun 2020</p>
+          </div>
+        </div>
+        <div class="share">
+        <img src="./images/icon-share.svg" alt="icon-share" id="share_icon" >
+      <div id="share-pop-up" class="hidden">
+        <p>
+    Share</p>
+    <img src="./images/icon-facebook.svg" alt="facebook icon">
+    <img src="./images/icon-twitter.svg" alt="twitter icon">
+    <img src="/images/icon-pinterest.svg" alt="pinterest icon">
+  </div>      </div>
+
+  </div></div>
+  </article>
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
