--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <p>28 Jun 2020</p>
           </div>
         </div>
-        <div class="share">
-        <img src="./images/icon-share.svg" alt="icon-share" id="share_icon" >
+        <div class="share" id="shareIcon">
+          <svg xmlns="http://www.w3.org/2000/svg" width="17" height="13"><path  d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"  /></svg>
       <div id="share-pop-up" class="hidden">
         <p>
     Share</p>
@@ -48,7 +48,7 @@
   </article>
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/ash-109">Ash</a>.
   </div> -->
 </body>
 
