--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
         </div>
         <div class="share" id="shareIcon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="17" height="13"><path  d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"  /></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="17" height="13"><path  d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z" id="share_icon_logo" /></svg>
       <div id="share-pop-up" class="hidden">
         <p>
     Share</p>
@@ -46,10 +46,10 @@
 
   </div></div>
   </article>
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/ash-109">Ash</a>.
-  </div> -->
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io/challenges/article-preview-component-dYBN_pYFT/hub" target="_blank">Frontend Mentor</a>
+    Coded by <a href="https://github.com/ash-109" target="_blank">Ash</a>
+  </div>
 </body>
 
 </html>
