--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <p>Share</p>
           <img src="./images/icon-facebook.svg" alt="facebook icon">
           <img src="./images/icon-twitter.svg" alt="twitter icon">
-          <img src="/images/icon-pinterest.svg" alt="pinterest icon"></div>
+          <img src="./images/icon-pinterest.svg" alt="pinterest icon"></div>
           
           <div class="share_mobile">
           <svg xmlns="http://www.w3.org/2000/svg" width="17" height="13" id="share_icon_mobile"  >
