--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io/challenges/article-preview-component-dYBN_pYFT/hub"
       target="_blank">Frontend Mentor</a>
-    Coded by <a href="https://github.com/ash-109" target="_blank">Ash</a>
+    Coded by <a href="https://github.com/ash-109/article-preview-component-frontendmentor/tree/main" target="_blank">Ash</a>
   </div>
 </body>
 
